--- a/5.Browser/raw/dom-ex/units.html
+++ b/5.Browser/raw/dom-ex/units.html
@@ -27,6 +27,7 @@
         }
         .parent {
             height: 200px;
+            /* width:50vw; */
             background-color: lightcoral;
         }
         /* percentage-> relative to parent  */
