--- a/5.Browser/raw/dom-ex/display.html
+++ b/5.Browser/raw/dom-ex/display.html
@@ -1,3 +1,5 @@
+
+  
 <!DOCTYPE html>
 <html lang="en">
 
@@ -7,25 +9,60 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <style>
-        body{
+        /* required space */
+        /* height and width can't be set  */
+        /* padding margin-> ✔ */
+        .inline {
+            display: block;
             background-color: lightblue;
+            font-size: 1.5rem;
+            /* height:100px; */
+            /* width:200px; */
+            /* padding-left: 10px;
+            padding-right: 10px;
+            padding-top:10px;
+            padding-bottom:10px; */
+            /* padding: 10px; */
+            /* margin:10px; */
+            /* margin:0 auto; */
         }
-        .box{
-            padding: 1rem;
-            border:1px solid red;
-            background-color: aquamarine;
-            margin-bottom: 2rem;
+        /*  full width */
+        /* next element-> next line  */
+        /* h,w ,p,m */
+        /*  block */
+        .block {
+            box-sizing: border-box;
+            display: block;
+            background-color: lightgreen;
+            height: 100px;
+            width: 100px;
+            margin: 10px auto;
+            text-align: center;
+            padding-top:40px ;
+        }
+        .inline-block {
+            display: inline-block;;
+            background-color: lightseagreen;
+            height: 100px;
+            width: 100px;
         }
     </style>
 </head>
 
 <body>
-    <div class="box">
-        hello
-    </div>
-    <div class="box">
-        HI    
-    </div>
+    <!-- inline -->
+    <span class="inline">I am Span</span>
+    <span class="inline">I am Span</span>
+    <span class="inline">I am Span</span>
+    <!-- block level elements -->
+    <div class="block">I am Block</div>
+    <div class="block"> I am Block</div>
+    <div class="block">I am Block</div>
+
+    <div class="inline-block">I am Inline Block</div>
+    <div class="inline-block"> I am Inline Block</div>
+    <div class="inline-block">I am Inline Block</div>
+
 </body>
 
-</html> 
+</html>
