--- a/5.Browser/activity/excel_clone/index.html
+++ b/5.Browser/activity/excel_clone/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -9,9 +10,52 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
 
 </head>
+
 <body>
-    <div class="menu-container">Menu</div>
-    <div class="formula-container">Formula</div>
+    <div class="menu-container">
+        <div class="formatting-container">
+            <div class="subgroup">
+                    <select name="" id="font-family">
+                        <option value="">Arial</option>
+                        <option value="">Times New Roman</option>
+                        <option value="">Georgia</option>
+                        <option value="">Monospace</option>
+                        <option value="">Cambria</option>
+                        <option value="">sans-sarif</option>
+                        <option value="">fantasy</option>
+                    </select>
+                <div class="bui_container">
+                    <input type="button" value="B">
+                    <input type="button" value="I">
+                    <input type="button" value="U">
+                </div>
+            </div>
+            <div class="subgroup">
+                    <select name="" id="font-size">
+                        <option value="8">8</option>
+                        <option value="10">10</option>
+                        <option value="12">12</option>
+                        <option value="16">16</option>
+                        <option value="20">20</option>
+                        <option value="30">30</option>
+                    </select>
+                <div class="color-container">
+                    <input type="color" id="color">
+                    <input type="color" id="bg-color">
+                </div>
+            </div>
+        </div>
+        <div class="alignment-container">
+            <input type="button" value="L" class="left">
+            <input type="button" value="C" class="center">
+            <input type="button" value="R" class="right">
+        </div>
+    </div>
+    <div class="formula-container">
+        <input type="text" class="address-box">
+        <div class="separator">:</div>
+        <input type="text" class="formula-box">
+    </div>
     <div class="grid_container">
         <div class="top-left-block">
         </div>
@@ -31,4 +75,5 @@
     </div>
     <script src="script.js"></script>
 </body>
+
 </html>
