--- a/5.Browser/activity/16_05_camera_app/index1.html
+++ b/5.Browser/activity/16_05_camera_app/index1.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Camera Application</title>
-    //<link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <!-- //Media capture and Streams api is and api related to webrtc -->
@@ -20,6 +20,6 @@
 
     </div>
     </div>
-    //<script src="script.js"></script>
+    <script src="script.js"></script>
 </body>
 </html>
